# pdf-privacy-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.bat  launcher.py  pyproject.toml  run.bat  run.sh  test_backend.py
backend/: main.py  ocr_helper.py  pii_detector.py  redactor.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  DownloadPanel.tsx  DropZone.tsx  DualViewer.tsx  Editor.tsx  HelpDialog.tsx  PdfPanel.tsx  ProcessingStatus.tsx  SettingsPanel.tsx  Uploader.tsx
frontend/src/components/editor/: EditorPanes.tsx  EditorToolbar.tsx  types.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Tooltip.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useTheme.ts
scripts/: launcher.py
tests/: test_backend.py
